--- a/public/scss/various/_homePro.scss
+++ b/public/scss/various/_homePro.scss
@@ -1,18 +1,10 @@
 .home-pro {
-    //margin-top: -120px;
-    //bottom: 0;
     width: 100%;
     min-height: 100%;
     background: url(../img/bg-landing-pro.jpg);
     background-position: no-repeat center center fixed;
-    //padding-top: 100px;
     background-size: cover;
     font-size: 14px;
-
-    @media screen and (min-width: $screen-sm-min) {
-        height: 100%;
-        margin-bottom: 0px;
-    }
 
     li {
         color: white;
@@ -26,11 +18,6 @@
             color: white;
             padding: 30px;
             margin-bottom: 100px;
-            @media screen and (max-width: 768px) {
-                //margin: 30px;
-                //margin: auto;
-                margin-top: 150px;
-            }
 
             h3 {
                 margin-top: 60px;
@@ -55,11 +42,6 @@
                     padding-right: 10px;
                     line-height: 35px;
                     text-align: left;
-                    @media screen and (max-width: $screen-xs-max){
-                        width: 35%;
-                        line-height: 47px;
-                        margin-right: 10px;
-                    }
                 }
                 .radio-inline {
                     margin-right: 5px;
@@ -71,17 +53,12 @@
                 }
             }
             label {
-                //width: fit-content;
                 margin-bottom: 5px;
                 margin-top: 10px;
-                //display: block;
             }
             .second-form {
                 width: 65%;
                 margin-top: -25px;
-                @media screen and (max-width: $screen-xs-max){
-                    width: 100%;
-                }
             }
             .btn-red {
                 font-weight: 200;
@@ -92,9 +69,6 @@
                 width: 48%;
                 margin-top: 20px;
                 border-radius: 0;
-                @media screen and (max-width: $screen-xs-max){
-                    width: calc(100% - 15px);
-                }
             }
 
             .contact {
@@ -106,7 +80,11 @@
                 }
             }
         }
-        @media screen and (max-width: $screen-sm-min) {
+    }
+    @media screen and (max-width: $screen-xs-max) {
+        height: 100%;
+        margin-bottom: 0px;
+        .row {
             h1 {
                 font-size: 20px;
                 text-align: center;
@@ -115,8 +93,26 @@
             li {
                 font-size: 18px;
             }
+            .claim {
+                .form-group {
+                    .radio-label {
+                        width: 35%;
+                        line-height: 47px;
+                        margin-right: 10px;
+                    }
+                }
+                .second-form {
+                    width: 100%;
+                }
+                .btn-red {
+                    width: calc(100% - 15px);
+                }
+            }
         }
-
+    }
+    @media screen and (min-width: $screen-sm-min) {
+        height: 100%;
+        margin-bottom: 0px;
     }
 }
 .advices {
