--- a/public/scss/various/_homePro.scss
+++ b/public/scss/various/_homePro.scss
@@ -69,8 +69,21 @@
                 width: 48%;
                 margin-top: 20px;
                 border-radius: 0;
+                @media screen and (max-width: $screen-sm-max) {
+                    font-size: 1.1em;
+                }
             }
-
+            .success {
+                border: 1px solid #20af69;
+                border-radius: 2px;
+                padding: 10px;
+                font-size: 1.3em;
+                color: #20af69;
+                display: inline-block;
+                //margin-left: 15px;
+                //margin-top: 15px;
+                margin: 15px 30px 0px 15px;
+            }
             .contact {
                 margin-top: 40px;
 
