--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10092,33 +10092,33 @@ header {
         background: transparent; }
     header:not(.white) .btn-search {
       display: none; }
-  header ul {
+  header ul.white-header {
     margin: 0;
     z-index: 1; }
-    header ul li {
+    header ul.white-header li {
       padding: 20px 17px 20px 17px;
       display: inline-block;
       position: relative;
       float: left; }
-      header ul li a {
+      header ul.white-header li a {
         font-size: 1.4em;
         font-weight: bolder;
         text-decoration: none !important; }
-        header ul li a:hover {
+        header ul.white-header li a:hover {
           opacity: 0.8; }
-        header ul li a:focus {
+        header ul.white-header li a:focus {
           outline: none; }
-      header ul li .active {
+      header ul.white-header li .active {
         position: absolute;
         bottom: -7px;
         left: 50%; }
-      header ul li .inactive {
+      header ul.white-header li .inactive {
         display: none; }
-    header ul .separate {
+    header ul.white-header .separate {
       font-size: 0.7em;
       float: left;
       margin-top: 25px; }
-    header ul div.PopUp {
+    header ul.white-header div.PopUp {
       text-align: center;
       padding: 30px 50px;
       z-index: 50;
@@ -10128,30 +10128,30 @@ header {
       position: absolute;
       background-color: #f4f4f4;
       box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.2); }
-      header ul div.PopUp p, header ul div.PopUp a {
+      header ul.white-header div.PopUp p, header ul.white-header div.PopUp a {
         color: #aaaaaa;
         font-size: 1.3em; }
-      header ul div.PopUp p.title {
+      header ul.white-header div.PopUp p.title {
         color: #fe5b5f;
         font-size: 1.5em; }
-      header ul div.PopUp div.link-list {
+      header ul.white-header div.PopUp div.link-list {
         width: 27%;
         float: left; }
-        header ul div.PopUp div.link-list a, header ul div.PopUp div.link-list p {
+        header ul.white-header div.PopUp div.link-list a, header ul.white-header div.PopUp div.link-list p {
           display: block;
           text-align: start;
           margin-bottom: 1px;
           font-size: 1.4em; }
-        header ul div.PopUp div.link-list a {
+        header ul.white-header div.PopUp div.link-list a {
           text-decoration: none !important; }
-          header ul div.PopUp div.link-list a:hover {
+          header ul.white-header div.PopUp div.link-list a:hover {
             opacity: 0.8; }
-          header ul div.PopUp div.link-list a:focus {
+          header ul.white-header div.PopUp div.link-list a:focus {
             outline: none; }
-        header ul div.PopUp div.link-list p.title {
+        header ul.white-header div.PopUp div.link-list p.title {
           margin-bottom: 10px;
           color: #595959; }
-      header ul div.PopUp a.picture {
+      header ul.white-header div.PopUp a.picture {
         display: block;
         text-decoration: none;
         font-size: 1em;
@@ -10160,11 +10160,11 @@ header {
         width: calc(36.5% - 5px);
         float: left;
         box-shadow: 3px 3px 2px #dfdfdf; }
-        header ul div.PopUp a.picture div {
+        header ul.white-header div.PopUp a.picture div {
           padding: 10px; }
-          header ul div.PopUp a.picture div p {
+          header ul.white-header div.PopUp a.picture div p {
             font-weight: lighter; }
-            header ul div.PopUp a.picture div p:nth-child(2) {
+            header ul.white-header div.PopUp a.picture div p:nth-child(2) {
               margin: 0; }
 
 .dropdown {
