--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -434,7 +434,7 @@ figure {
 
     &:hover {
         color: white; text-decoration: none;
-        background-color: darken($darkgrey,10%);
+        background-color: darken($hairfie,10%);
     }
     @media screen and (max-width: $screen-xs-max) {
         margin-top: 5px;
