--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -56,7 +56,7 @@ header {
 		height: 28px;
 		margin-right: 15px;
 		&.close {
-			background: url(../img/icons/mobile-menu-close.svg) no-repeat center center;
+			background: url(../img/icons/cross.svg) no-repeat center center;
 			background-size: 90%;
 			opacity: 1;
 		}
@@ -73,7 +73,7 @@ header {
 		height: 25px;
 		//margin-right: 15px;
 		&.close {
-			background: url(../img/icons/mobile-menu-close.svg) no-repeat center center;
+			background: url(../img/icons/cross.svg) no-repeat center center;
 			background-size: 90%;
 			opacity: 1;
 		}
